<resources>
    <string name="app_name">testingapp</string>
    <string name="slogan">Кушайте постоянно: дома, на работе, в офисе и метро! Наше приложение поможет вам заказать еду куда-угодно</string>
    <string name="register">Регистрация</string>
    <string name="auth">Авторизация</string>
    <string name="hintPhone">Номер телефона</string>
    <string name="hintPassword">Пароль</string>
    <string name="authUser">Войти в кабинет</string>
    <string name="hintName">Введите имя</string>
    <string name="addToCart">Добавить в корзину</string>
    <string name="btnGoToCart">Перейти в корзину</string>
    <string name="textCart">Корзина</string>
    <string name="btnMakeOrder">Оформить заказ</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544~3347511713</string>
</resources>
